--- a/DWR Tracker.csproj
+++ b/DWR Tracker.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\AutotrackerConnection.cs" />
     <Compile Include="Classes\DWConfiguration.cs" />
     <Compile Include="Classes\DWEnemy.cs" />
     <Compile Include="Classes\DWHero.cs" />
