--- a/DWR Tracker.csproj
+++ b/DWR Tracker.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -266,9 +267,6 @@
     </Compile>
     <EmbeddedResource Include="Fonts\Dragon Warrior %28NES%29.ttf" />
     <Content Include="dwr-tracker.PNG" />
-    <Content Include="emulators.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
